# codex-websocket-chat

./: README.md  autoinstall.yaml  main.py  pyproject.toml
src/codex_client/: __init__.py  chat.py  config.py  structured.py
src/codex_client/tool/: base.py  server.py
src/examples/: README.md  pyproject.toml
src/examples/interactive/: main.py
src/examples/mcp/: main.py
src/examples/weather/: main.py  tool.py
