[project]
name = "codex-client-examples"
version = "0.1.0"
description = "Example applications demonstrating Codex Client capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Cheowan Park", email = "cheolwan.park552@gmail.com" },
    { name = "Codex Assistant" },
]
keywords = ["codex", "examples", "mcp", "demo", "tutorial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "codex-client",
    "httpx>=0.27.0",
    "fastmcp>=2.12.2",
    "pydantic>=2.0",
]

[tool.uv.sources]
codex-client = { path = "../..", editable = true }
